Chuncks of code to look into the data in PC coordinates

--- a/Assignment.qmd
+++ b/Assignment.qmd
@@ -25,3 +25,16 @@ str(biopsy)
 head(biopsy)
 
 ```
+
+```{r}
+pca_fit <- biopsy %>% 
+  select(where(is.numeric)) %>% # retain only numeric columns
+  prcomp(scale = TRUE) # do PCA on scaled data
+```
+
+```{r}
+pca_fit <- biopsy %>% 
+  select(where(is.numeric)) %>% # retain only numeric columns
+  scale() %>% # scale data
+  prcomp() # do PCA
+```
